Ex4/DnDParser.js
// Generated from DnD.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var DnDListener = require('./DnDListener').DnDListener;
var DnDVisitor = require('./DnDVisitor').DnDVisitor;

var grammarFileName = "DnD.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'name'", "'race'", "'background'", "'date'", 
                     "'class'", "'justClass'", "'subclass'", "'level'", 
                     "'feats'", "'HP'", "'AC'", "'Str'", "'Dex'", "'Con'", 
                     "'Int'", "'Wis'", "'Cha'", "'alignment'", "'skills'", 
                     "'weapons'", "'spells'", "'day'", "'processedAlignment'", 
                     "'good'", "'lawful'", "'processedRace'", "'processedSpells'", 
                     "'processedWeapons'", "'levelGroup'", "'|'", "'\t'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, "SEP", "NEWLINE", "NUMBER", 
                      "TEXT" ];

var ruleNames =  [ "file", "hdr", "row", "name", "race", "background", "date", 
                   "fclass", "justClass", "subclass", "level", "feats", 
                   "hP", "aC", "str", "dex", "con", "fint", "wis", "cha", 
                   "alignment", "skills", "weapons", "spells", "day", "processedAlignment", 
                   "good", "lawful", "processedRace", "processedSpells", 
                   "processedWeapons", "levelGroup", "field", "field_list", 
                   "number" ];

function DnDParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

DnDParser.prototype = Object.create(antlr4.Parser.prototype);
DnDParser.prototype.constructor = DnDParser;

Object.defineProperty(DnDParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

DnDParser.EOF = antlr4.Token.EOF;
DnDParser.T__0 = 1;
DnDParser.T__1 = 2;
DnDParser.T__2 = 3;
DnDParser.T__3 = 4;
DnDParser.T__4 = 5;
DnDParser.T__5 = 6;
DnDParser.T__6 = 7;
DnDParser.T__7 = 8;
DnDParser.T__8 = 9;
DnDParser.T__9 = 10;
DnDParser.T__10 = 11;
DnDParser.T__11 = 12;
DnDParser.T__12 = 13;
DnDParser.T__13 = 14;
DnDParser.T__14 = 15;
DnDParser.T__15 = 16;
DnDParser.T__16 = 17;
DnDParser.T__17 = 18;
DnDParser.T__18 = 19;
DnDParser.T__19 = 20;
DnDParser.T__20 = 21;
DnDParser.T__21 = 22;
DnDParser.T__22 = 23;
DnDParser.T__23 = 24;
DnDParser.T__24 = 25;
DnDParser.T__25 = 26;
DnDParser.T__26 = 27;
DnDParser.T__27 = 28;
DnDParser.T__28 = 29;
DnDParser.T__29 = 30;
DnDParser.SEP = 31;
DnDParser.NEWLINE = 32;
DnDParser.NUMBER = 33;
DnDParser.TEXT = 34;

DnDParser.RULE_file = 0;
DnDParser.RULE_hdr = 1;
DnDParser.RULE_row = 2;
DnDParser.RULE_name = 3;
DnDParser.RULE_race = 4;
DnDParser.RULE_background = 5;
DnDParser.RULE_date = 6;
DnDParser.RULE_fclass = 7;
DnDParser.RULE_justClass = 8;
DnDParser.RULE_subclass = 9;
DnDParser.RULE_level = 10;
DnDParser.RULE_feats = 11;
DnDParser.RULE_hP = 12;
DnDParser.RULE_aC = 13;
DnDParser.RULE_str = 14;
DnDParser.RULE_dex = 15;
DnDParser.RULE_con = 16;
DnDParser.RULE_fint = 17;
DnDParser.RULE_wis = 18;
DnDParser.RULE_cha = 19;
DnDParser.RULE_alignment = 20;
DnDParser.RULE_skills = 21;
DnDParser.RULE_weapons = 22;
DnDParser.RULE_spells = 23;
DnDParser.RULE_day = 24;
DnDParser.RULE_processedAlignment = 25;
DnDParser.RULE_good = 26;
DnDParser.RULE_lawful = 27;
DnDParser.RULE_processedRace = 28;
DnDParser.RULE_processedSpells = 29;
DnDParser.RULE_processedWeapons = 30;
DnDParser.RULE_levelGroup = 31;
DnDParser.RULE_field = 32;
DnDParser.RULE_field_list = 33;
DnDParser.RULE_number = 34;


function FileContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DnDParser.RULE_file;
    return this;
}

FileContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FileContext.prototype.constructor = FileContext;

FileContext.prototype.hdr = function() {
    return this.getTypedRuleContext(HdrContext,0);
};

FileContext.prototype.EOF = function() {
    return this.getToken(DnDParser.EOF, 0);
};

FileContext.prototype.row = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(RowContext);
    } else {
        return this.getTypedRuleContext(RowContext,i);
    }
};

FileContext.prototype.enterRule = function(listener) {
    if(listener instanceof DnDListener ) {
        listener.enterFile(this);
	}
};

FileContext.prototype.exitRule = function(listener) {
    if(listener instanceof DnDListener ) {
        listener.exitFile(this);
	}
};

FileContext.prototype.accept = function(visitor) {
    if ( visitor instanceof DnDVisitor ) {
        return visitor.visitFile(this);
    } else {
        return visitor.visitChildren(this);
    }
};




DnDParser.FileContext = FileContext;

DnDParser.prototype.file = function() {

    var localctx = new FileContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, DnDParser.RULE_file);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 70;
        this.hdr();
        this.state = 72; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 71;
            this.row();
            this.state = 74; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(((((_la - 31)) & ~0x1f) == 0 && ((1 << (_la - 31)) & ((1 << (DnDParser.SEP - 31)) | (1 << (DnDParser.NUMBER - 31)) | (1 << (DnDParser.TEXT - 31)))) !== 0));
        this.state = 76;
        this.match(DnDParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function HdrContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DnDParser.RULE_hdr;
    return this;
}

HdrContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
HdrContext.prototype.constructor = HdrContext;

HdrContext.prototype.SEP = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(DnDParser.SEP);
    } else {
        return this.getToken(DnDParser.SEP, i);
    }
};


HdrContext.prototype.NEWLINE = function() {
    return this.getToken(DnDParser.NEWLINE, 0);
};

HdrContext.prototype.enterRule = function(listener) {
    if(listener instanceof DnDListener ) {
        listener.enterHdr(this);
	}
};

HdrContext.prototype.exitRule = function(listener) {
    if(listener instanceof DnDListener ) {
        listener.exitHdr(this);
	}
};

HdrContext.prototype.accept = function(visitor) {
    if ( visitor instanceof DnDVisitor ) {
        return visitor.visitHdr(this);
    } else {
        return visitor.visitChildren(this);
    }
};




DnDParser.HdrContext = HdrContext;

DnDParser.prototype.hdr = function() {

    var localctx = new HdrContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, DnDParser.RULE_hdr);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 78;
        this.match(DnDParser.T__0);
        this.state = 79;
        this.match(DnDParser.SEP);
        this.state = 80;
        this.match(DnDParser.T__1);
        this.state = 81;
        this.match(DnDParser.SEP);
        this.state = 82;
        this.match(DnDParser.T__2);
        this.state = 83;
        this.match(DnDParser.SEP);
        this.state = 84;
        this.match(DnDParser.T__3);
        this.state = 85;
        this.match(DnDParser.SEP);
        this.state = 86;
        this.match(DnDParser.T__4);
        this.state = 87;
        this.match(DnDParser.SEP);
        this.state = 88;
        this.match(DnDParser.T__5);
        this.state = 89;
        this.match(DnDParser.SEP);
        this.state = 90;
        this.match(DnDParser.T__6);
        this.state = 91;
        this.match(DnDParser.SEP);
        this.state = 92;
        this.match(DnDParser.T__7);
        this.state = 93;
        this.match(DnDParser.SEP);
        this.state = 94;
        this.match(DnDParser.T__8);
        this.state = 95;
        this.match(DnDParser.SEP);
        this.state = 96;
        this.match(DnDParser.T__9);
        this.state = 97;
        this.match(DnDParser.SEP);
        this.state = 98;
        this.match(DnDParser.T__10);
        this.state = 99;
        this.match(DnDParser.SEP);
        this.state = 100;
        this.match(DnDParser.T__11);
        this.state = 101;
        this.match(DnDParser.SEP);
        this.state = 102;
        this.match(DnDParser.T__12);
        this.state = 103;
        this.match(DnDParser.SEP);
        this.state = 104;
        this.match(DnDParser.T__13);
        this.state = 105;
        this.match(DnDParser.SEP);
        this.state = 106;
        this.match(DnDParser.T__14);
        this.state = 107;
        this.match(DnDParser.SEP);
        this.state = 108;
        this.match(DnDParser.T__15);
        this.state = 109;
        this.match(DnDParser.SEP);
        this.state = 110;
        this.match(DnDParser.T__16);
        this.state = 111;
        this.match(DnDParser.SEP);
        this.state = 112;
        this.match(DnDParser.T__17);
        this.state = 113;
        this.match(DnDParser.SEP);
        this.state = 114;
        this.match(DnDParser.T__18);
        this.state = 115;
        this.match(DnDParser.SEP);
        this.state = 116;
        this.match(DnDParser.T__19);
        this.state = 117;
        this.match(DnDParser.SEP);
        this.state = 118;
        this.match(DnDParser.T__20);
        this.state = 119;
        this.match(DnDParser.SEP);
        this.state = 120;
        this.match(DnDParser.T__21);
        this.state = 121;
        this.match(DnDParser.SEP);
        this.state = 122;
        this.match(DnDParser.T__22);
        this.state = 123;
        this.match(DnDParser.SEP);
        this.state = 124;
        this.match(DnDParser.T__23);
        this.state = 125;
        this.match(DnDParser.SEP);
        this.state = 126;
        this.match(DnDParser.T__24);
        this.state = 127;
        this.match(DnDParser.SEP);
        this.state = 128;
        this.match(DnDParser.T__25);
        this.state = 129;
        this.match(DnDParser.SEP);
        this.state = 130;
        this.match(DnDParser.T__26);
        this.state = 131;
        this.match(DnDParser.SEP);
        this.state = 132;
        this.match(DnDParser.T__27);
        this.state = 133;
        this.match(DnDParser.SEP);
        this.state = 134;
        this.match(DnDParser.T__28);
        this.state = 135;
        this.match(DnDParser.NEWLINE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function RowContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DnDParser.RULE_row;
    return this;
}

RowContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RowContext.prototype.constructor = RowContext;

RowContext.prototype.name = function() {
    return this.getTypedRuleContext(NameContext,0);
};

RowContext.prototype.SEP = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(DnDParser.SEP);
    } else {
        return this.getToken(DnDParser.SEP, i);
    }
};


RowContext.prototype.race = function() {
    return this.getTypedRuleContext(RaceContext,0);
};

RowContext.prototype.background = function() {
    return this.getTypedRuleContext(BackgroundContext,0);
};

RowContext.prototype.date = function() {
    return this.getTypedRuleContext(DateContext,0);
};

RowContext.prototype.fclass = function() {
    return this.getTypedRuleContext(FclassContext,0);
};

RowContext.prototype.justClass = function() {
    return this.getTypedRuleContext(JustClassContext,0);
};

RowContext.prototype.subclass = function() {
    return this.getTypedRuleContext(SubclassContext,0);
};

RowContext.prototype.level = function() {
    return this.getTypedRuleContext(LevelContext,0);
};

RowContext.prototype.feats = function() {
    return this.getTypedRuleContext(FeatsContext,0);
};

RowContext.prototype.hP = function() {
    return this.getTypedRuleContext(HPContext,0);
};

RowContext.prototype.aC = function() {
    return this.getTypedRuleContext(ACContext,0);
};

RowContext.prototype.str = function() {
    return this.getTypedRuleContext(StrContext,0);
};

RowContext.prototype.dex = function() {
    return this.getTypedRuleContext(DexContext,0);
};

RowContext.prototype.con = function() {
    return this.getTypedRuleContext(ConContext,0);
};

RowContext.prototype.fint = function() {
    return this.getTypedRuleContext(FintContext,0);
};

RowContext.prototype.wis = function() {
    return this.getTypedRuleContext(WisContext,0);
};

RowContext.prototype.cha = function() {
    return this.getTypedRuleContext(ChaContext,0);
};

RowContext.prototype.alignment = function() {
    return this.getTypedRuleContext(AlignmentContext,0);
};

RowContext.prototype.skills = function() {
    return this.getTypedRuleContext(SkillsContext,0);
};

RowContext.prototype.weapons = function() {
    return this.getTypedRuleContext(WeaponsContext,0);
};

RowContext.prototype.spells = function() {
    return this.getTypedRuleContext(SpellsContext,0);
};

RowContext.prototype.day = function() {
    return this.getTypedRuleContext(DayContext,0);
};

RowContext.prototype.processedAlignment = function() {
    return this.getTypedRuleContext(ProcessedAlignmentContext,0);
};

RowContext.prototype.good = function() {
    return this.getTypedRuleContext(GoodContext,0);
};

RowContext.prototype.lawful = function() {
    return this.getTypedRuleContext(LawfulContext,0);
};

RowContext.prototype.processedRace = function() {
    return this.getTypedRuleContext(ProcessedRaceContext,0);
};

RowContext.prototype.processedSpells = function() {
    return this.getTypedRuleContext(ProcessedSpellsContext,0);
};

RowContext.prototype.processedWeapons = function() {
    return this.getTypedRuleContext(ProcessedWeaponsContext,0);
};

RowContext.prototype.levelGroup = function() {
    return this.getTypedRuleContext(LevelGroupContext,0);
};

RowContext.prototype.NEWLINE = function() {
    return this.getToken(DnDParser.NEWLINE, 0);
};

RowContext.prototype.enterRule = function(listener) {
    if(listener instanceof DnDListener ) {
        listener.enterRow(this);
	}
};

RowContext.prototype.exitRule = function(listener) {
    if(listener instanceof DnDListener ) {
        listener.exitRow(this);
	}
};

RowContext.prototype.accept = function(visitor) {
    if ( visitor instanceof DnDVisitor ) {
        return visitor.visitRow(this);
    } else {
        return visitor.visitChildren(this);
    }
};




DnDParser.RowContext = RowContext;

DnDParser.prototype.row = function() {

    var localctx = new RowContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, DnDParser.RULE_row);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 137;
        this.name();
        this.state = 138;
        this.match(DnDParser.SEP);
        this.state = 139;
        this.race();
        this.state = 140;
        this.match(DnDParser.SEP);
        this.state = 141;
        this.background();
        this.state = 142;
        this.match(DnDParser.SEP);
        this.state = 143;
        this.date();
        this.state = 144;
        this.match(DnDParser.SEP);
        this.state = 145;
        this.fclass();
        this.state = 146;
        this.match(DnDParser.SEP);
        this.state = 147;
        this.justClass();
        this.state = 148;
        this.match(DnDParser.SEP);
        this.state = 149;
        this.subclass();
        this.state = 150;
        this.match(DnDParser.SEP);
        this.state = 151;
        this.level();
        this.state = 152;
        this.match(DnDParser.SEP);
        this.state = 153;
        this.feats();
        this.state = 154;
        this.match(DnDParser.SEP);
        this.state = 155;
        this.hP();
        this.state = 156;
        this.match(DnDParser.SEP);
        this.state = 157;
        this.aC();
        this.state = 158;
        this.match(DnDParser.SEP);
        this.state = 159;
        this.str();
        this.state = 160;
        this.match(DnDParser.SEP);
        this.state = 161;
        this.dex();
        this.state = 162;
        this.match(DnDParser.SEP);
        this.state = 163;
        this.con();
        this.state = 164;
        this.match(DnDParser.SEP);
        this.state = 165;
        this.fint();
        this.state = 166;
        this.match(DnDParser.SEP);
        this.state = 167;
        this.wis();
        this.state = 168;
        this.match(DnDParser.SEP);
        this.state = 169;
        this.cha();
        this.state = 170;
        this.match(DnDParser.SEP);
        this.state = 171;
        this.alignment();
        this.state = 172;
        this.match(DnDParser.SEP);
        this.state = 173;
        this.skills();
        this.state = 174;
        this.match(DnDParser.SEP);
        this.state = 175;
        this.weapons();
        this.state = 176;
        this.match(DnDParser.SEP);
        this.state = 177;
        this.spells();
        this.state = 178;
        this.match(DnDParser.SEP);
        this.state = 179;
        this.day();
        this.state = 180;
        this.match(DnDParser.SEP);
        this.state = 181;
        this.processedAlignment();
        this.state = 182;
        this.match(DnDParser.SEP);
        this.state = 183;
        this.good();
        this.state = 184;
        this.match(DnDParser.SEP);
        this.state = 185;
        this.lawful();
        this.state = 186;
        this.match(DnDParser.SEP);
        this.state = 187;
        this.processedRace();
        this.state = 188;
        this.match(DnDParser.SEP);
        this.state = 189;
        this.processedSpells();
        this.state = 190;
        this.match(DnDParser.SEP);
        this.state = 191;
        this.processedWeapons();
        this.state = 192;
        this.match(DnDParser.SEP);
        this.state = 193;
        this.levelGroup();
        this.state = 194;
        this.match(DnDParser.NEWLINE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function NameContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DnDParser.RULE_name;
    return this;
}

NameContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
NameContext.prototype.constructor = NameContext;

NameContext.prototype.field = function() {
    return this.getTypedRuleContext(FieldContext,0);
};

NameContext.prototype.number = function() {
    return this.getTypedRuleContext(NumberContext,0);
};

NameContext.prototype.enterRule = function(listener) {
    if(listener instanceof DnDListener ) {
        listener.enterName(this);
	}
};

NameContext.prototype.exitRule = function(listener) {
    if(listener instanceof DnDListener ) {
        listener.exitName(this);
	}
};

NameContext.prototype.accept = function(visitor) {
    if ( visitor instanceof DnDVisitor ) {
        return visitor.visitName(this);
    } else {
        return visitor.visitChildren(this);
    }
};




DnDParser.NameContext = NameContext;

DnDParser.prototype.name = function() {

    var localctx = new NameContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, DnDParser.RULE_name);
    try {
        this.state = 198;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case DnDParser.SEP:
        case DnDParser.TEXT:
            this.enterOuterAlt(localctx, 1);
            this.state = 196;
            this.field();
            break;
        case DnDParser.NUMBER:
            this.enterOuterAlt(localctx, 2);
            this.state = 197;
            this.number();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function RaceContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DnDParser.RULE_race;
    return this;
}

RaceContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RaceContext.prototype.constructor = RaceContext;

RaceContext.prototype.field = function() {
    return this.getTypedRuleContext(FieldContext,0);
};

RaceContext.prototype.enterRule = function(listener) {
    if(listener instanceof DnDListener ) {
        listener.enterRace(this);
	}
};

RaceContext.prototype.exitRule = function(listener) {
    if(listener instanceof DnDListener ) {
        listener.exitRace(this);
	}
};

RaceContext.prototype.accept = function(visitor) {
    if ( visitor instanceof DnDVisitor ) {
        return visitor.visitRace(this);
    } else {
        return visitor.visitChildren(this);
    }
};




DnDParser.RaceContext = RaceContext;

DnDParser.prototype.race = function() {

    var localctx = new RaceContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, DnDParser.RULE_race);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 200;
        this.field();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function BackgroundContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DnDParser.RULE_background;
    return this;
}

BackgroundContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BackgroundContext.prototype.constructor = BackgroundContext;

BackgroundContext.prototype.field = function() {
    return this.getTypedRuleContext(FieldContext,0);
};

BackgroundContext.prototype.enterRule = function(listener) {
    if(listener instanceof DnDListener ) {
        listener.enterBackground(this);
	}
};

BackgroundContext.prototype.exitRule = function(listener) {
    if(listener instanceof DnDListener ) {
        listener.exitBackground(this);
	}
};

BackgroundContext.prototype.accept = function(visitor) {
    if ( visitor instanceof DnDVisitor ) {
        return visitor.visitBackground(this);
    } else {
        return visitor.visitChildren(this);
    }
};




DnDParser.BackgroundContext = BackgroundContext;

DnDParser.prototype.background = function() {

    var localctx = new BackgroundContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, DnDParser.RULE_background);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 202;
        this.field();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function DateContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DnDParser.RULE_date;
    return this;
}

DateContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DateContext.prototype.constructor = DateContext;

DateContext.prototype.field = function() {
    return this.getTypedRuleContext(FieldContext,0);
};

DateContext.prototype.enterRule = function(listener) {
    if(listener instanceof DnDListener ) {
        listener.enterDate(this);
	}
};

DateContext.prototype.exitRule = function(listener) {
    if(listener instanceof DnDListener ) {
        listener.exitDate(this);
	}
};

DateContext.prototype.accept = function(visitor) {
    if ( visitor instanceof DnDVisitor ) {
        return visitor.visitDate(this);
    } else {
        return visitor.visitChildren(this);
    }
};




DnDParser.DateContext = DateContext;

DnDParser.prototype.date = function() {

    var localctx = new DateContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, DnDParser.RULE_date);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 204;
        this.field();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function FclassContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DnDParser.RULE_fclass;
    return this;
}

FclassContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FclassContext.prototype.constructor = FclassContext;

FclassContext.prototype.field_list = function() {
    return this.getTypedRuleContext(Field_listContext,0);
};

FclassContext.prototype.enterRule = function(listener) {
    if(listener instanceof DnDListener ) {
        listener.enterFclass(this);
	}
};

FclassContext.prototype.exitRule = function(listener) {
    if(listener instanceof DnDListener ) {
        listener.exitFclass(this);
	}
};

FclassContext.prototype.accept = function(visitor) {
    if ( visitor instanceof DnDVisitor ) {
        return visitor.visitFclass(this);
    } else {
        return visitor.visitChildren(this);
    }
};




DnDParser.FclassContext = FclassContext;

DnDParser.prototype.fclass = function() {

    var localctx = new FclassContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, DnDParser.RULE_fclass);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 206;
        this.field_list();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function JustClassContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DnDParser.RULE_justClass;
    return this;
}

JustClassContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
JustClassContext.prototype.constructor = JustClassContext;

JustClassContext.prototype.field_list = function() {
    return this.getTypedRuleContext(Field_listContext,0);
};

JustClassContext.prototype.enterRule = function(listener) {
    if(listener instanceof DnDListener ) {
        listener.enterJustClass(this);
	}
};

JustClassContext.prototype.exitRule = function(listener) {
    if(listener instanceof DnDListener ) {
        listener.exitJustClass(this);
	}
};

JustClassContext.prototype.accept = function(visitor) {
    if ( visitor instanceof DnDVisitor ) {
        return visitor.visitJustClass(this);
    } else {
        return visitor.visitChildren(this);
    }
};




DnDParser.JustClassContext = JustClassContext;

DnDParser.prototype.justClass = function() {

    var localctx = new JustClassContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, DnDParser.RULE_justClass);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 208;
        this.field_list();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function SubclassContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = DnDParser.RULE_subclass;
    return this;
}

SubclassContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SubclassContext.prototype.constructor = SubclassContext;

SubclassContext.prototype.field_list = function() {
    return this.getTypedRuleContext(Field_listContext,0);
};

SubclassContext.prototype.enterRule = function(listener) {
    if(listener instanceof DnDListener ) {
        listener.enterSubclass(this);
	}
};

SubclassContext.prototype.exitRule = function(listener) {
    if(listener instanceof DnDListener ) {
        listener.exitSubclass(this);
	}
};

SubclassContext.prototype.accept = function(visitor) {
    if ( visitor instanceof DnDVisitor ) {
        return visitor.visitSubclass(this);
    } else {
        return visitor.visitChildren(this);
    }
};




DnDParser.SubclassContext = SubclassContext;

DnDParser.prototype.subclass = function() {
